post in promocode and car
